--- a/lab/html_templates/html_main_document.html
+++ b/lab/html_templates/html_main_document.html
@@ -6,19 +6,33 @@
 </head>
 <body>
 
-    <!--<div style="width: 970px; height: 250px;">-->
-        <!--<a href="http://siscopuig.com">-->
-            <!--<img id="image_0001" src="advert_970x250.png">-->
+    <!--<div style="width: 300px; height: 250px;">-->
+        <!--<a href="https://events.marcusevans-events.com/real-estate-investors-summit-what-investment/&nx">-->
+            <!--<img id="image_0001" src="https://tpc.googlesyndication.com/simgad/2143365295016291254">-->
         <!--</a>-->
     <!--</div>-->
 
-    <!--<a href="http://bs.serving-sys.com/Serving/adServer.bs?cn=brd&pli=1074216618&Page=&Pos=1934671096"-->
-       <!--target="_blank">-->
-        <!--<img src="http://bs.serving-sys.com/Serving/adServer.bs?c=8&cn=display&pli=1074216618&Page=&Pos=1934671096"-->
-             <!--border=0-->
-             <!--width=728-->
-             <!--height=90>-->
-    <!--</a>-->
+    <!--<div style="width: 300px; height: 250px;">-->
+        <!--<a href="https://events.marcusevans-events.com/real-estate-investors-summit-what-investment/&nx">-->
+            <!--<img id="image_0002" src="https://tpc.googlesyndication.com/simgad/2143365295016291254">-->
+        <!--</a>-->
+    <!--</div>-->
+
+
+    <!--<div style="width: 728px; height: 90px;">-->
+        <!--<a href="https://events.marcusevans-events.com/real-estate-investors-summit-what-investment/&nx">-->
+            <!--<img id="image_0003" src="https://tpc.googlesyndication.com/simgad/14892290388837919801">-->
+        <!--</a>-->
+    <!--</div>-->
+
+
+    <a href="https://www.clearbridge.com/global-esg.html?cmpid=cbieu18_eur_web_penage_ros_728x90_wtr"
+       target="_blank">
+        <img src="http://ds.serving-sys.com/resources/PROD/asset/43572/IMAGE/20180110/MEETING_CBI17_728x90_34113136763077999.jpg"
+             border=0
+             width=728
+             height=90>
+    </a>
 
 
     <!--<iframe-->
@@ -47,22 +61,24 @@
             <!--data-load-complete="true">-->
     <!--</iframe>-->
 
+    <!--<div style="width: 970px; height: 250px;">-->
+        <!--<a href="https://www4.troweprice.com/gis/tpd/dk/en/home.html">-->
+            <!--<iframe-->
+                    <!--id="google_ads_iframe_/9257181/Trustnet/Top_3"-->
+                    <!--src="html_iframe_0_3.html"-->
+                    <!--title="3rd party ad content"-->
+                    <!--name="google_ads_iframe_/9257181/Trustnet/Top_3"-->
+                    <!--width="970" height="250"-->
+                    <!--scrolling="no"-->
+                    <!--marginwidth="0"-->
+                    <!--marginheight="0"-->
+                    <!--frameborder="0"-->
+                    <!--style="border: 0;-->
+                    <!--vertical-align: bottom;"-->
+                    <!--data-load-complete="true">-->
+            <!--</iframe>-->
+        <!--</a>-->
+    <!--</div>-->
 
-    <a href="https://www4.troweprice.com/gis/tpd/dk/en/home.html">
-        <iframe
-                id="google_ads_iframe_/9257181/Trustnet/Top_3"
-                src="html_iframe_0_3.html"
-                title="3rd party ad content"
-                name="google_ads_iframe_/9257181/Trustnet/Top_3"
-                width="970" height="250"
-                scrolling="no"
-                marginwidth="0"
-                marginheight="0"
-                frameborder="0"
-                style="border: 0;
-                vertical-align: bottom;"
-                data-load-complete="true">
-        </iframe>
-    </a>
 </body>
 </html>
